feat : hw3 refactor calc of width  heght